# gpu-monitor

./: .gitignore  .gitmodules  CMakeLists.txt  MANIFEST.in  README.rst  requirements.txt  setup.py  tox.ini
docs/: api.rst  conf.py
gpusmi/core/: __init__.py  monitor.py
gpusmi/plugins/amd/: __init__.py
gpusmi/plugins/nvidia/: __init__.py
tests/unit/: test_plugins.py
