CMAKE_MINIMUM_REQUIRED(VERSION 3.13)

# project name + language used
PROJECT(gpusmic C CXX)

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)

ADD_SUBDIRECTORY(dependencies/rocm_smi_lib)
ADD_SUBDIRECTORY(gpusmi/src)
